// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pressable Tests Pressables can be defined as a set using accessibilityPosInSet and accessibilitySetSize 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_set",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "PositionInSet": 1,
        "SizeofSet": 3,
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Pressable 1 of 3",
            "TextRangePattern.GetText": "Pressable 1 of 3",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LiveSetting": "Polite",
        "LocalizedControlType": "group",
        "PositionInSet": 2,
        "SizeofSet": 3,
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Pressable 2 of 3",
            "TextRangePattern.GetText": "Pressable 2 of 3",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LiveSetting": "Assertive",
        "LocalizedControlType": "group",
        "PositionInSet": 3,
        "SizeofSet": 3,
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Pressable 3 of 3",
            "TextRangePattern.GetText": "Pressable 3 of 3",
          },
        ],
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_set",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "pressable_set",
    "Offset": "0, 0, 0",
    "Size": "873, 83.000244",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "873, 27.999756",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 27.999756",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 28.999512",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 28.999512",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 28, 0",
        "Size": "873, 28.000488",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 28.000488",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 29.000244",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 29.000244",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 56, 0",
        "Size": "873, 27",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 27",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 29.000244",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 29.000244",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can be disabled, disabled = {false} 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_disabled_false",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Enabled Pressable",
        "TextRangePattern.GetText": "Enabled Pressable",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_disabled_false",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "pressable_disabled_false",
    "Offset": "0, 0, 0",
    "Size": "873, 57.999985",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "353, 15, 0",
        "Size": "168, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "168, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can be disabled, disabled = {true} 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_disabled_true",
    "ControlType": 50026,
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Disabled Pressable",
        "TextRangePattern.GetText": "Disabled Pressable",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_disabled_true",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {
          "Opacity": 0.5,
        },
      },
    ],
  },
  "Visual Tree": {
    "Comment": "pressable_disabled_true",
    "Offset": "0, 0, 0",
    "Size": "873, 58.000008",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "350, 15, 0",
        "Size": "174, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Opacity": 0.5,
            "Size": "174, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can change style when pressed 1`] = `
{
  "Automation Tree": {
    "AutomationId": "style-change-pressable",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "style-change-pressable",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 255)",
    },
    "Comment": "style-change-pressable",
    "Offset": "0, 0, 0",
    "Size": "873, 49.99997",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "388, 9, 0",
        "Size": "96, 33",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "96, 33",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can change text on press/rest, state rest 1`] = `
{
  "Automation Tree": {
    "AutomationId": "one_press_me_button",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Press Me",
    "TextRangePattern.GetText": "Press Me",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "one_press_me_button",
    },
  },
  "Visual Tree": {
    "Comment": "one_press_me_button",
    "Offset": "0, 0, 0",
    "Size": "84, 28.999992",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can change text on press/rest, state rest 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_press_console",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "onPress",
    "TextRangePattern.GetText": "onPress",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "pressable_press_console",
    },
  },
  "Visual Tree": {
    "Comment": "pressable_press_console",
    "Offset": "0, 0, 0",
    "Size": "780, 29.000015",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Pressables can have advanced borders 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_hit_slop_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
        "TextRangePattern.GetText": "Press Outside This View",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_hit_slop_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Comment": "pressable_hit_slop_button",
    "Offset": "0, 0, 0",
    "Size": "217.99997, 27",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "220.00003, 29.000061",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "220.00003, 29.000061",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have delayed event handlers 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_delay_events_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_delay_events_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "pressable_delay_events_button",
    "Offset": "0, 0, 0",
    "Size": "84, 28.000008",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "84, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "84, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have delayed event handlers 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_delay_events_console",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "pressOut",
        "TextRangePattern.GetText": "pressOut",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "pressIn",
        "TextRangePattern.GetText": "pressIn",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_delay_events_console",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(249, 249, 249, 255)",
    },
    "Comment": "pressable_delay_events_console",
    "Offset": "0, 0, 0",
    "Size": "843, 180",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, 0, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, -2, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "16, 16, 0",
        "Size": "810, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "16, 44, 0",
        "Size": "810, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers, hover 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_button",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "pressable feedback events",
    "ValuePattern.Value": "Press Me",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "pressable feedback events",
      "TestId": "pressable_feedback_events_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "pressable_feedback_events_button",
    "Offset": "0, 0, 0",
    "Size": "84, 27.999985",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "84, 28.999992",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "84, 28.999992",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers, hover 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_console",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "hover in",
        "TextRangePattern.GetText": "hover in",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_feedback_events_console",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(249, 249, 249, 255)",
    },
    "Comment": "pressable_feedback_events_console",
    "Offset": "0, 0, 0",
    "Size": "843, 180",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, 0, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, -2, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "16, 16, 0",
        "Size": "810, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers, hover and click 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_button",
    "ControlType": 50000,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "pressable feedback events",
    "ValuePattern.Value": "Press Me",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Me",
        "TextRangePattern.GetText": "Press Me",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "AccessibilityLabel": "pressable feedback events",
      "TestId": "pressable_feedback_events_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "pressable_feedback_events_button",
    "Offset": "0, 0, 0",
    "Size": "84, 27.999985",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "84, 28.999992",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "84, 28.999992",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have event handlers, hover and click 2`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_feedback_events_console",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "pressOut",
        "TextRangePattern.GetText": "pressOut",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "focus",
        "TextRangePattern.GetText": "focus",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "press",
        "TextRangePattern.GetText": "press",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "pressIn",
        "TextRangePattern.GetText": "pressIn",
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "hover in",
        "TextRangePattern.GetText": "hover in",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_feedback_events_console",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(249, 249, 249, 255)",
    },
    "Comment": "pressable_feedback_events_console",
    "Offset": "0, 0, 0",
    "Size": "843, 180",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, 0, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 0, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "-2, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "2, -2, 0",
        "Size": "-4, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, -2, 0",
        "Size": "2, 2",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "0, 2, 0",
        "Size": "2, -4",
        "Visual Type": "SpriteVisual",
      },
      {
        "Offset": "16, 16, 0",
        "Size": "810, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "16, 44, 0",
        "Size": "810, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "16, 72, 0",
        "Size": "810, 28.99997",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 28.99997",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "16, 100, 0",
        "Size": "810, 27.999985",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 27.999985",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "16, 128, 0",
        "Size": "810, 29.000015",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "810, 29.000015",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have hit slop functionality 1`] = `
{
  "Automation Tree": {
    "AutomationId": "pressable_hit_slop_button",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Press Outside This View",
        "TextRangePattern.GetText": "Press Outside This View",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "pressable_hit_slop_button",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 0, 0, 255)",
    },
    "Comment": "pressable_hit_slop_button",
    "Offset": "0, 0, 0",
    "Size": "217.99997, 27",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "220.00003, 29.000061",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "220.00003, 29.000061",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have ranging opacity 1`] = `
{
  "Automation Tree": {
    "AutomationId": "opacity_pressable",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "opacity_pressable",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.10000000149011612,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.20000000298023224,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.30000001192092896,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.4000000059604645,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.5,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.6000000238418579,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.699999988079071,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.800000011920929,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {
          "Opacity": 0.8999999761581421,
        },
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "opacity_pressable",
    "Offset": "0, 0, 0",
    "Size": "873, 825",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 75, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.10000000149011612,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 150, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.20000000298023224,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 225, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.30000001192092896,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 300, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.4000000059604645,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 375, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.5,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 450, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.6000000238418579,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 525, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.699999988079071,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 600, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.800000011920929,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 675, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Opacity": 0.8999999761581421,
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "0, 750, 0",
        "Size": "75.00001, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Size": "75.00001, 75",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have their accessibility and keyboard focus removed 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessible_pressable",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Pressable with accessible=true and focusable=true",
            "TextRangePattern.GetText": "Pressable with accessible=true and focusable=true",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Pressable with accessible=false",
        "TextRangePattern.GetText": "Pressable with accessible=false",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "LocalizedControlType": "group",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Pressable with focusable=false",
            "TextRangePattern.GetText": "Pressable with focusable=false",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Pressable with accessible=false and focusable=false",
        "TextRangePattern.GetText": "Pressable with accessible=false and focusable=false",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "accessible_pressable",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "accessible_pressable",
    "Offset": "0, 0, 0",
    "Size": "873, 270",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "873, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 75",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 28.999878",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 28.999878",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 75, 0",
        "Size": "873, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 75",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 28.999878",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 28.999878",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 150, 0",
        "Size": "873, 75",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 75",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 28.999878",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 28.999878",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 225, 0",
        "Size": "873, 45",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 45",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "0, 0, 0",
                "Size": "873, 28.999878",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "873, 28.999878",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can have tooltips 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tooltip_pressable",
    "ControlType": 50026,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "Pressable with ToolTip "Pressable"",
        "TextRangePattern.GetText": "Pressable with ToolTip "Pressable"",
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "tooltip_pressable",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
    ],
  },
  "Visual Tree": {
    "Comment": "tooltip_pressable",
    "Offset": "0, 0, 0",
    "Size": "873, 28.000488",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "873, 29.000244",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 29.000244",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Pressables can hide their backface 1`] = `
{
  "Automation Tree": {
    "AutomationId": "backface_pressable",
    "ControlType": 50026,
    "LocalizedControlType": "group",
    "__Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "View #1, front is visible, back is hidden.",
        "TextRangePattern.GetText": "View #1, front is visible, back is hidden.",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Front",
            "TextRangePattern.GetText": "Front",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Back (You should not see this)",
            "TextRangePattern.GetText": "Back (You should not see this)",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50020,
        "LocalizedControlType": "text",
        "Name": "View #2, front is hidden, back is visible.",
        "TextRangePattern.GetText": "View #2, front is hidden, back is visible.",
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Front (You should not see this)",
            "TextRangePattern.GetText": "Front (You should not see this)",
          },
        ],
      },
      {
        "AutomationId": "",
        "ControlType": 50026,
        "IsKeyboardFocusable": true,
        "LocalizedControlType": "group",
        "__Children": [
          {
            "AutomationId": "",
            "ControlType": 50020,
            "LocalizedControlType": "text",
            "Name": "Back",
            "TextRangePattern.GetText": "Back",
          },
        ],
      },
    ],
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
    "_Props": {
      "TestId": "backface_pressable",
    },
    "__Children": [
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
        "_Props": {},
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
      {
        "Type": "Microsoft.ReactNative.Composition.ViewComponentView",
        "_Props": {},
        "__Children": [
          {
            "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
            "_Props": {},
          },
        ],
      },
    ],
  },
  "Visual Tree": {
    "Comment": "backface_pressable",
    "Offset": "0, 0, 0",
    "Size": "873, 701.00024",
    "Visual Type": "SpriteVisual",
    "__Children": [
      {
        "Offset": "0, 0, 0",
        "Size": "873, 44.000244",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 44.000244",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "287, 43, 0",
        "Size": "300, 300",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 255, 255)",
            },
            "Offset": "0, 0, 0",
            "Size": "300, 300",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "125, 136, 0",
                "Size": "49.99997, 28.999512",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "49.99997, 28.999512",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "287, 43, 0",
        "Size": "300, 300",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(255, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Size": "300, 300",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "12, 136, 0",
                "Size": "276, 28.999512",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "276, 28.999512",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "0, 342, 0",
        "Size": "873, 59.000244",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Offset": "0, 0, 0",
            "Size": "873, 59.000244",
            "Visual Type": "SpriteVisual",
          },
        ],
      },
      {
        "Offset": "287, 401, 0",
        "Size": "300, 300",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 0, 255, 255)",
            },
            "Offset": "0, 0, 0",
            "Size": "300, 300",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "9, 136, 0",
                "Size": "282, 29.000244",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "282, 29.000244",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
      {
        "Offset": "287, 401, 0",
        "Size": "300, 300",
        "Visual Type": "SpriteVisual",
        "__Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(255, 0, 0, 255)",
            },
            "Offset": "0, 0, 0",
            "Size": "300, 300",
            "Visual Type": "SpriteVisual",
            "__Children": [
              {
                "Offset": "128, 136, 0",
                "Size": "43.99997, 29.000244",
                "Visual Type": "SpriteVisual",
                "__Children": [
                  {
                    "Offset": "0, 0, 0",
                    "Size": "43.99997, 29.000244",
                    "Visual Type": "SpriteVisual",
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
}
`;

exports[`Pressable Tests Text can have pressable behavior 1`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "Text has built-in onPress handling",
    "TextRangePattern.GetText": "Text has built-in onPress handling",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "tappable_text",
    },
  },
  "Visual Tree": {
    "Comment": "tappable_text",
    "Offset": "0, 0, 0",
    "Size": "873, 28.999992",
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Pressable Tests Text can have pressable behavior 2`] = `
{
  "Automation Tree": {
    "AutomationId": "tappable_text_console",
    "ControlType": 50020,
    "LocalizedControlType": "text",
    "Name": "2x text onPress",
    "TextRangePattern.GetText": "2x text onPress",
  },
  "Component Tree": {
    "Type": "Microsoft.ReactNative.Composition.ParagraphComponentView",
    "_Props": {
      "TestId": "tappable_text_console",
    },
  },
  "Visual Tree": {
    "Comment": "tappable_text_console",
    "Offset": "0, 0, 0",
    "Size": "780, 29.000015",
    "Visual Type": "SpriteVisual",
  },
}
`;
